--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@auth0/auth0-react": "^2.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.5.3",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@eslint/js": "^9.18.0",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@typescript-eslint/eslint-plugin": "^8.20.0",
