--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.3.0",
+    "auth0-lock": "^13.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.5.3",
@@ -21,6 +22,7 @@
     "@biomejs/biome": "1.9.4",
     "@eslint/js": "^9.18.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@types/auth0-lock": "^11.27.9",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@typescript-eslint/eslint-plugin": "^8.20.0",
