--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@auth0/auth0-react": "^2.3.0",
     "@heroicons/react": "^2.2.0",
     "auth0-lock": "^13.0.0",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.5.3",
