--- a/.env
+++ b/.env
@@ -30,6 +30,7 @@ VITE_SUBSCRIBE=/subscribe
 VITE_GET_USER_SUBSCRIPTIONS=/subscribed
 VITE_UNSUBSCRIBE=/unsubscribe
 VITE_IS_SUBSCRIBE=/is-subscribed
+VITE_GET_CREATOR_SUBSCRIBERS=/subscriber
 
 #followers
 VITE_IS_FOLLOWING=/is-following
