feat: creator's fee is now updateable

--- a/.env
+++ b/.env
@@ -38,3 +38,11 @@ VITE_FOLLOW=/follow
 VITE_GET_FOLLOWERS_OF_CREATOR=/follower
 VITE_GET_ALL_FOLLOWING=/following
 VITE_UNFOLLOW=/unfollow
+
+#collections
+VITE_CREATE_COLLECTION=/collection
+VITE_UPDATE_COLLECTION=/collection
+VITE_GET_DETAILED_COLLECTION_BY_ID=/collection/detailed
+VITE_DELETE_COLLECTION=/collection
+VITE_GET_ALL_COLLECTIONS_FOR_CREATOR=/creator/collection
+VITE_GET_ALL_FREE_COLLECTIONS_FOR_CREATOR=/creator/collection/free
