feat: create collection page created

--- a/.env
+++ b/.env
@@ -46,3 +46,6 @@ VITE_GET_DETAILED_COLLECTION_BY_ID=/collection/detailed
 VITE_DELETE_COLLECTION=/collection
 VITE_GET_ALL_COLLECTIONS_FOR_CREATOR=/creator/collection
 VITE_GET_ALL_FREE_COLLECTIONS_FOR_CREATOR=/creator/collection/free
+
+#genres
+VITE_GET_ALL_GENRES=/genre
