feat: add edit wizard to collection page

--- a/.env
+++ b/.env
@@ -47,5 +47,12 @@ VITE_DELETE_COLLECTION=/collection
 VITE_GET_ALL_COLLECTIONS_FOR_CREATOR=/creator/collection
 VITE_GET_ALL_FREE_COLLECTIONS_FOR_CREATOR=/creator/collection/free
 
+#outfit
+VITE_UPDATE_OUTFIT=/outfit
+VITE_DELETE_OUTFIT=/outfit
+
+#outfit item
+VITE_UPDATE_OUTFIT_ITEM=/outfit/item
+VITE_DELETE_OUTFIT_ITEM=/outfit/item
 #genres
 VITE_GET_ALL_GENRES=/genre
