feat: collection review post done

--- a/.env
+++ b/.env
@@ -56,3 +56,17 @@ VITE_UPDATE_OUTFIT_ITEM=/outfit/item
 VITE_DELETE_OUTFIT_ITEM=/outfit/item
 #genres
 VITE_GET_ALL_GENRES=/genre
+
+#reviews
+VITE_GET_AVERAGE_RATING=/collection/rating
+VITE_GET_OWN_REVIEW=/collection/review
+VITE_GET_REVIEWS_BY_COLLECTION_ID=/collection/review
+VITE_UPDATE_REVIEW=/review
+VITE_CREATE_REVIEW=/review
+VITE_DELETE_REVIEW=/review
+
+#review answer
+VITE_UPDATE_REVIEW_ANSWER=/review/answer
+VITE_POST_REVIEW_ANSWER=/review/answer
+VITE_GET_REVIEW_ANSWER=/review/answer
+VITE_DELETE_REVIEW_ANSWER=/review/answer
